Fix overflow issue in editor toolbar

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -329,6 +329,8 @@ span.replaced {
 
 .editor-toolbar {
   margin: 3px 0;
+  overflow-y: auto;
+  max-width: 100%;
 }
 
 .panel-body .table-condensed {
